--- a/style.scss
+++ b/style.scss
@@ -92,9 +92,10 @@ body {
 
 .menu {
     width: 41%;
+    min-width: 380px;
     display: flex;
     justify-content: space-between;
-    margin-left: 22%
+    margin-left: 22%;
 }
 
 .menu-section {
@@ -135,10 +136,10 @@ body {
 
 .block-1 {
     background: url(images/Rectangle_2.svg) no-repeat;
-    background-position:center;
+    background-position: center;
     height: 720px;
     box-sizing: border-box;
-    padding-top: 11%;
+    padding-top: 161px;
     padding-left: 8%;
     position: relative;
     z-index: 1;
@@ -267,7 +268,7 @@ body {
 
 .no-borders-button {
     width: 107px;
-    height: 7%;
+    height: 36px;
     border: none;
     border-bottom: 2px solid $textcolor;
     @include fonts(Raleway Bold, normal, 700, 18px, 18px);
@@ -308,7 +309,7 @@ body {
 }
 
 .graph__extra-text {
-    margin-top: 14%;
+    margin-top: 30px;
     @include fonts(Raleway Bold, normal, 700, 13px, 22px);
     color: $textcolor;
 
@@ -398,7 +399,7 @@ body {
 .block-4__left-section {
     background: #E3EEED;
     box-sizing: border-box;
-    padding-top: 19%;
+    padding-top: 120px;
     padding-left: 17%;
 }
 
@@ -437,7 +438,7 @@ body {
 .block-4__right-section {
     background: $textcolor;
     box-sizing: border-box;
-    padding-top: 26%;
+    padding-top: 165px;
     padding-left: 16%;
 
     p {
@@ -450,7 +451,7 @@ body {
 }
 
 .block-5 {
-    height: 1282px;
+    height: 1220px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -458,8 +459,8 @@ body {
 
 .block-5__section-1 {
     height: 298px;
-    margin-top: 10%;
-    margin-bottom: 5%;
+    margin-top: 120px;
+    margin-bottom: 60px;
     display: flex;
     width: 83%;
     justify-content: space-between;
@@ -497,7 +498,7 @@ body {
     align-content: space-between;
 
     .graph__extra-text {
-        margin-top: 10%;
+        margin-top: 13px;
     }
 }
 
@@ -507,20 +508,25 @@ body {
 }
 
 .block-5__section-3 {
-    margin-top: 9%;
+    margin-top: 117px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     width: 74%;
-    height: 40%;
-
+    height: 500px;
+}
+.section-3__img-wrap {
+    width: 28%;
     img {
-        width: 28%;
+        width: 100%;
     }
 }
-
 .section-3__text-wrap {
     width: 51%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
 
     .title {
         margin-top: 20px;
@@ -542,8 +548,9 @@ body {
     background-position: center;
     height: 522px;
     box-sizing: border-box;
-    padding-top: 9%;
     padding-left: 8%;
+    display: flex;
+    align-items: center;
 }
 
 .block-6__text-wrap {
@@ -579,24 +586,29 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    .title {
-        margin-top: 9%;
-    }
+    justify-content: center;
 }
 
 .slider {
-    margin-top: 8%;
+    margin-top: 115px;
     display: flex;
     width: 89%;
     justify-content: space-between;
+
+    img:first-child {
+        width: 24px;
+    }
+
+    img:last-child {
+        width: 24px;
+    }
 }
 
 .block-8 {
     height: 608px;
     display: grid;
     grid-template-columns: repeat(3, 25%);
-    grid-template-rows: 61%;
+    grid-template-rows: 368px;
     gap: 3%;
     place-content: center;
 }
@@ -625,10 +637,15 @@ body {
     gap: 0px;
 }
 
+.block-9__left-section {
+    background: url(images/Rectangle16.svg)no-repeat;
+    background-position: center;
+}
+
 .block-9__right-section {
     background: #E3EEED;
     box-sizing: border-box;
-    padding-top: 19%;
+    padding-top: 144px;
     padding-left: 16%;
 }
 
@@ -638,12 +655,12 @@ body {
     flex-direction: column;
 
     div:nth-child(2) {
-        margin-top: 14%;
-        margin-bottom: 18%;
+        margin-top: 46px;
+        margin-bottom: 60px;
     }
 
     button {
-        width: 30%;
+        width: 125px;
         height: 47px;
         background: #43806C;
         border: 1px solid #43806C;
@@ -663,12 +680,12 @@ body {
 
 .footer-wrap {
     width: 83%;
-    height: 81%;
-    margin-top: 3%;
+    height: 638px;
+    margin-top: 65px;
 }
 
 .footer__section-1 {
-    height: 45%;
+    height: 286px;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -704,7 +721,7 @@ body {
 
 .mailing-form {
     width: 30%;
-    height: 75%;
+    height: 214px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -744,11 +761,17 @@ body {
     }
 }
 
+.footer__icons-wrap {
+    display: flex;
+    width: 121px;
+    justify-content: space-between;
+}
+
 .footer__section-2 {
     @include fonts(Raleway Regular, normal, 400, 14px, 24px);
     color: white;
     letter-spacing: 0.02px;
-    height: 57%;
+    height: 355px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
