--- a/style_media.scss
+++ b/style_media.scss
@@ -20,6 +20,8 @@
         padding-left: 4%;
     }
 
+
+
     .block-1__text-wrap {
         width: 55%;
     }
@@ -95,5 +97,532 @@
 
     .footer-wrap {
         width: 90%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    body {
+        max-width: 991px;
+        overflow-x: hidden;
+    }
+
+    .header {
+        button {
+            margin-left: 6%;
+        }
+    }
+
+    .menu {
+        margin-left: 8%;
+    }
+
+    .login {
+        margin-left: 3%;
+    }
+
+    .lang {
+        margin-left: 4%;
+    }
+
+    .block-1 {
+        height: 720px;
+        padding-top: 150px;
+        padding-left: 4%;
+    }
+
+    .block-1__text-wrap {
+        width: 55%;
+    }
+
+    .title {
+        @include fonts(Roboto Bold, normal, 700, 26px, 36px);
+    }
+
+    .block-2 {
+        width: 93%;
+        max-width: 991px;
+    }
+
+    .block-3__text-wrap {
+        width: 45%;
+    }
+
+    .no-borders-button {
+        @include fonts(Raleway Bold, normal, 700, 16px, 16px);
+    }
+
+    .extra-text {
+        @include fonts(Raleway Regular, normal, 400, 14px, 26px);
+    }
+
+    .block-3__graph {
+        margin-left: 2%;
+        width: 44%;
+    }
+
+    .block-4__left-section {
+        padding-top: 120px;
+        padding-left: 10%;
+    }
+
+    .block-4__text-wrap {
+        width: 90%;
+
+        p {
+            color: #43806C;
+            margin-top: 18px;
+            @include fonts(Roboto Regular, normal, 400, 24px, 34px);
+        }
+    }
+
+    .big-text {
+        @include fonts(Roboto Bold, normal, 700, 24px, 34px);
+
+        &::after {
+            margin-top: 8px;
+        }
+    }
+
+    .block-4__right-section {
+        padding-top: 150px;
+        padding-left: 10%;
+
+        p {
+            color: white;
+            @include fonts(Raleway Regular, normal, 400, 18px, 32px);
+            letter-spacing: 0.02px;
+            width: 90%;
+
+        }
+    }
+
+    .block-5__section-1 {
+        width: 90%;
+
+        img {
+            width: 46%;
+        }
+    }
+
+    .block-5__section-1 {
+        img {
+            width: 45%;
+        }
+    }
+
+    .section-1__text-wrap {
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .block-5__section-2 {
+        width: 90%;
+        grid-template-columns: 22% 24% 20% 20%;
+    }
+
+    .number {
+        @include fonts(Roboto Bold, normal, 700, 55px, 68px);
+    }
+
+    .block-5__section-3 {
+        width: 90%;
+    }
+
+    .section-3__img-wrap {
+        width: 33%;
+    }
+
+    .section-3__text-wrap {
+        width: 57%;
+    }
+
+    .block-6 {
+        padding-left: 4%;
+    }
+
+    .block-6__text-wrap {
+        width: 45%;
+
+        .title {
+            width: 90%;
+        }
+
+        .small-text {
+            @include fonts(Raleway Bold, normal, 700, 13px, 20px);
+        }
+    }
+
+    .block-7__wrap {
+        width: 94%;
+    }
+
+    .slider {
+        width: 90%;
+
+        img {
+            width: 15%;
+        }
+    }
+
+    .block-8 {
+        grid-template-columns: repeat(3, 29%);
+    }
+
+    .article-title {
+        @include fonts(Roboto Bold, normal, 700, 16px, 22px);
+    }
+
+    .block-9__right-section {
+        padding-left: 10%;
+    }
+
+    .block-9__text-wrap {
+        width: 85%;
+    }
+
+    .footer-wrap {
+        width: 93%;
+    }
+
+    .footer__links {
+        width: 50%;
+    }
+
+    .footer__links__section {
+        div {
+            @include fonts(Raleway Regular, normal, 400, 13px, 25px);
+
+        }
+
+        .main-links {
+            @include fonts(Raleway Bold, normal, 700, 12px, 24px);
+        }
+    }
+
+    .mailing-form {
+        width: 35%;
+
+        div {
+            @include fonts(Raleway Regular, normal, 400, 13px, 25px);
+        }
+    }
+
+    .footer__input-wrap {
+        input {
+            &::placeholder {
+                @include fonts(Raleway Regular, normal, 400, 13px, 24px);
+                color: white;
+                letter-spacing: 0.02px;
+            }
+        }
+    }
+
+    .footer__section-2 {
+        @include fonts(Raleway Regular, normal, 400, 13px, 25px);
+    }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+    body {
+        max-width: 767px;
+        overflow-x: hidden;
+    }
+
+    .header {
+        height: 70px;
+
+        button {
+            @include fonts(Raleway Bold, normal, 700, 13px, 20px);
+            margin-left: 47%;
+        }
+    }
+
+    .logo-wrap {
+        margin-left: 7%;
+
+        img {
+            width: 60px;
+        }
+    }
+
+    .lang {
+        margin-left: 5%;
+        margin-right: 3%;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .login {
+
+        &::after {
+            top: 6px;
+            left: 38px;
+        }
+    }
+
+    .block-1 {
+        display: flex;
+        justify-content: center;
+        height: 620px;
+        padding-top: 110px;
+        padding-left: 0px;
+        position: none;
+        z-index: none;
+    }
+
+    .block-1__text-wrap {
+        width: 74%;
+    }
+
+    .title {
+        @include fonts(Roboto Bold, normal, 700, 26px, 36px);
+        color: $textcolor;
+    }
+
+    .block-2 {
+        box-shadow: none;
+        border-radius: 0px;
+        width: 100%;
+        max-width: 767px;
+        height: 330px;
+        position: static;
+        z-index: none;
+        left: 0;
+        right: 0;
+        margin: auto;
+        top: 0px;
+        display: grid;
+        place-content: center;
+    }
+
+    .block-2__frames-wrap {
+        display: grid;
+        place-content: center;
+        grid-template-rows: repeat(3, 70px);
+        grid-template-columns: 90%;
+        gap: 20px;
+        height: 100%;
+    }
+
+    .block-3 {
+        height: 800px;
+        z-index: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .block-3__text-wrap {
+        width: 90%;
+
+        .title {
+            margin-top: 20px;
+        }
+    }
+
+    .extra-text {
+        @include fonts(Raleway Regular, normal, 400, 14px, 26px);
+    }
+
+    .block-3__graph {
+        margin-left: 0px;
+        width: 90%;
+    }
+
+    .block-4 {
+        height: 900px;
+        display: grid;
+        grid-template-rows: repeat(2, 50%);
+        grid-template-columns: 100%;
+    }
+
+    .block-4__left-section {
+        padding-top: 70px;
+        padding-left: 15%;
+    }
+
+    .block-4__text-wrap {
+        width: 100%;
+
+        p {
+            @include fonts(Roboto Regular, normal, 400, 26px, 22px);
+        }
+    }
+
+    .big-text {
+        @include fonts(Roboto Bold, normal, 700, 26px, 22px);
+
+        &::after {
+            margin-top: 2px;
+        }
+    }
+
+    .block-4__right-section {
+        padding-top: 70px;
+        padding-left: 15%;
+
+        p {
+            @include fonts(Raleway Regular, normal, 400, 20px, 24px);
+            letter-spacing: 0.02px;
+            width: 80%;
+
+        }
+    }
+
+    .block-5 {
+        height: 1000px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .block-5__section-1 {
+        height: 250px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+        width: 90%;
+
+        img {
+            display: none;
+        }
+    }
+
+    .section-1__text-wrap {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .block-5__section-2 {
+        display: grid;
+        width: 90%;
+        grid-template-columns: 47% 47%;
+        gap: 6%;
+        grid-template-rows: 150px 150px;
+    }
+
+    .block-5__section-3 {
+        margin-top: 70px;
+        width: 90%;
+        height: 300px;
+    }
+
+    .section-3__img-wrap {
+        display: none;
+    }
+
+    .section-3__text-wrap {
+        width: 100%;
+    }
+
+    .block-6 {
+        height: 522px;
+    }
+
+    .block-6__text-wrap {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+
+        .title {
+            width: 100%;
+        }
+    }
+
+    .block-7 {
+        height: 366px;
+    }
+
+    .slider {
+        margin-top: 50px;
+
+        img {
+            width: 25%;
+        }
+
+        img:nth-child(4) {
+            display: none;
+        }
+
+        img:nth-child(5) {
+            display: none;
+        }
+    }
+
+    .block-8 {
+        height: 700px;
+        box-sizing: border-box;
+        margin-top: 50px;
+        grid-template-rows: repeat(2, 330px);
+        grid-template-columns: 45% 45%;
+        gap: 3%;
+    }
+
+    .article-wrap {
+        gap: 8px;
+    }
+
+    .article-title {
+        @include fonts(Roboto Bold, normal, 700, 18px, 20px);
+    }
+
+    .block-9 {
+        height: 500px;
+        grid-template-columns: 100%;
+    }
+
+    .block-9__left-section {
+        display: none;
+    }
+
+    .footer {
+        height: 1200px;
+        align-items: flex-start;
+    }
+
+    .footer-wrap {
+        width: 90%;
+        height: 800px;
+        margin-top: 0px;
+    }
+
+    .footer__section-1 {
+        margin-top: 100px;
+        height: 520px;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+    }
+
+    .footer__links {
+        width: 90%;
+    }
+
+
+    .footer__links__section {
+    
+        div {
+            @include fonts(Raleway Regular, normal, 400, 14px, 27px);
+        }
+    }
+
+    .mailing-form {
+        width: 90%;
+        height: 214px;
+        margin-bottom: 50px;
+    }
+
+    .footer__section-2 {
+        height: 570px;
+    }
+
+    .last-line {
+        display: flex;
+        flex-direction: column;
     }
 }
