--- a/style_media.scss
+++ b/style_media.scss
@@ -169,7 +169,6 @@
         width: 90%;
 
         p {
-            color: #43806C;
             margin-top: 18px;
             @include fonts(Roboto Regular, normal, 400, 24px, 34px);
         }
@@ -188,9 +187,7 @@
         padding-left: 10%;
 
         p {
-            color: white;
             @include fonts(Raleway Regular, normal, 400, 18px, 32px);
-            letter-spacing: 0.02px;
             width: 90%;
 
         }
@@ -313,8 +310,6 @@
         input {
             &::placeholder {
                 @include fonts(Raleway Regular, normal, 400, 13px, 24px);
-                color: white;
-                letter-spacing: 0.02px;
             }
         }
     }
@@ -468,9 +463,7 @@
 
         p {
             @include fonts(Raleway Regular, normal, 400, 20px, 24px);
-            letter-spacing: 0.02px;
             width: 80%;
-
         }
     }
 
@@ -605,7 +598,7 @@
 
 
     .footer__links__section {
-    
+
         div {
             @include fonts(Raleway Regular, normal, 400, 14px, 27px);
         }
@@ -619,6 +612,398 @@
 
     .footer__section-2 {
         height: 570px;
+    }
+
+    .last-line {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 480px) {
+
+    body {
+        max-width: 480px;
+        overflow-x: hidden;
+    }
+
+    .header {
+        height: 70px;
+
+        button {
+            @include fonts(Raleway Bold, normal, 700, 11px, 20px);
+            margin-left: 30%;
+            width: 21%;
+        }
+    }
+
+    .logo-wrap {
+        margin-left: 7%;
+
+        img {
+            width: 50px;
+        }
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .login {
+        @include fonts(Raleway Bold, normal, 700, 12px, 20px);
+
+        &::after {
+            left: 35px;
+        }
+    }
+
+    .lang {
+        @include fonts(Raleway Bold, normal, 700, 12px, 20px);
+        margin-left: 6%;
+        margin-right: 0%;
+    }
+
+    .block-1 {
+        display: flex;
+        justify-content: center;
+        height: 620px;
+        padding-top: 100px;
+        padding-left: 0px;
+        position: none;
+        z-index: none;
+    }
+
+    .block-1__text-wrap {
+        width: 85%;
+    }
+
+    .title {
+        @include fonts(Roboto Bold, normal, 700, 26px, 36px);
+    }
+
+    .block-1__form {
+        label {
+            @include fonts(Raleway Bold, normal, 700, 14px, 24px);
+        }
+    }
+
+    .input-wrap {
+        margin-top: 16px;
+
+        input {
+            padding-left: 10px;
+
+            &::placeholder {
+                @include fonts(Raleway Bold, normal, 700, 12px, 20px);
+            }
+        }
+
+        button {
+            @include fonts(Raleway Bold, normal, 700, 12px, 20px);
+        }
+    }
+
+    .block-2 {
+        box-shadow: none;
+        border-radius: 0px;
+        width: 100%;
+        max-width: 767px;
+        height: 350px;
+        position: static;
+        z-index: none;
+        left: 0;
+        right: 0;
+        margin: auto;
+        top: 0px;
+        display: grid;
+        place-content: center;
+    }
+
+    .block-2__frames-wrap {
+        display: grid;
+        place-content: center;
+        grid-template-rows: repeat(3, 70px);
+        grid-template-columns: 90%;
+        gap: 30px;
+        height: 100%;
+    }
+
+    .block-3 {
+        height: 900px;
+        margin-top: -30px;
+        z-index: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .block-3__text-wrap {
+        width: 90%;
+
+        .title {
+            margin-top: 20px;
+        }
+    }
+
+    .extra-text {
+        @include fonts(Raleway Regular, normal, 400, 14px, 26px);
+    }
+
+    .no-borders-button {
+        @include fonts(Raleway Bold, normal, 700, 16px, 18px);
+    }
+
+    .block-3__graph {
+        margin-left: 0px;
+        width: 90%;
+    }
+
+    .percent {
+        @include fonts(Roboto Bold, normal, 700, 60px, 90px);
+    }
+
+    .graph__extra-text {
+        @include fonts(Raleway Bold, normal, 700, 12px, 22px);
+    }
+
+    .graph-one {
+        width: 30%;
+
+        &::after {
+            @include fonts(Raleway Bold, normal, 700, 12px, 22px);
+        }
+    }
+
+    .graph-two {
+        width: 30%;
+
+        &::after {
+            @include fonts(Raleway Bold, normal, 700, 12px, 22px);
+        }
+    }
+
+    .block-4 {
+        height: 900px;
+        display: grid;
+        grid-template-rows: repeat(2, 50%);
+        grid-template-columns: 100%;
+    }
+
+    .block-4__left-section {
+        padding-top: 70px;
+        padding-left: 10%;
+    }
+
+    .block-4__text-wrap {
+        width: 100%;
+
+        p {
+            @include fonts(Roboto Regular, normal, 400, 22px, 22px);
+        }
+    }
+
+    .big-text {
+        @include fonts(Roboto Bold, normal, 700, 22px, 22px);
+
+        &::after {
+            margin-left: 13px;
+            margin-top: 2px;
+        }
+    }
+
+    .block-4__right-section {
+        padding-top: 70px;
+        padding-left: 10%;
+
+        p {
+            @include fonts(Raleway Regular, normal, 400, 16px, 24px);
+            width: 80%;
+
+        }
+    }
+
+    .block-5 {
+        height: 1150px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .block-5__section-1 {
+        height: 300px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+        width: 90%;
+
+        img {
+            display: none;
+        }
+    }
+
+    .section-1__text-wrap {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .block-5__section-2 {
+        display: grid;
+        width: 90%;
+        grid-template-columns: 47% 47%;
+        gap: 6%;
+        grid-template-rows: 200px 200px;
+    }
+
+    .block-5__section-3 {
+        margin-top: 50px;
+        width: 90%;
+        height: 300px;
+    }
+
+    .section-3__img-wrap {
+        display: none;
+    }
+
+    .section-3__text-wrap {
+        width: 100%;
+    }
+
+    .block-6 {
+        height: 522px;
+    }
+
+    .block-6__text-wrap {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+
+        .title {
+            width: 100%;
+        }
+
+        .extra-text {
+            color: rgba(0, 0, 0, 0.746);
+        }
+    }
+
+    .block-7 {
+        height: 300px;
+    }
+
+    .slider {
+        margin-top: 50px;
+
+        img {
+            width: 30%;
+        }
+
+        img:nth-child(3) {
+            display: none;
+        }
+
+        img:nth-child(4) {
+            display: none;
+        }
+
+        img:nth-child(5) {
+            display: none;
+        }
+    }
+
+    .block-8 {
+        height: 500px;
+        box-sizing: border-box;
+        margin-top: 40px;
+        grid-template-rows: repeat(2, 240px);
+        grid-template-columns: 45% 45%;
+        gap: 3%;
+    }
+
+    .article-wrap {
+        gap: 8px;
+    }
+
+    .article-title {
+        @include fonts(Roboto Bold, normal, 700, 14px, 20px);
+    }
+
+    .block-9 {
+        height: 400px;
+        grid-template-columns: 100%;
+    }
+
+    .block-9__right-section {
+        padding-top: 70px;
+        padding-left: 10%;
+    }
+
+    .block-9__left-section {
+        display: none;
+    }
+
+    .block-9__text-wrap {
+        width: 90%;
+    }
+
+    .footer {
+        height: 1300px;
+        align-items: flex-start;
+    }
+
+    .footer-wrap {
+        width: 90%;
+        height: 800px;
+        margin-top: 0px;
+    }
+
+    .footer__section-1 {
+        margin-top: 70px;
+        height: 520px;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+    }
+
+    .footer__logo {
+        width: 75%;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .footer__links {
+        width: 90%;
+        display: grid;
+        grid-template-columns: repeat(3, 35%);
+        gap: 7%;
+        grid-template-rows: 200px;
+    }
+
+    .footer__links__section {
+
+        div {
+            @include fonts(Raleway Regular, normal, 400, 14px, 27px);
+        }
+
+        .main-links {
+            @include fonts(Raleway Bold, normal, 700, 14px, 24px);
+        }
+    }
+
+    .mailing-form {
+        width: 100%;
+        height: 214px;
+        margin-bottom: 50px;
+    }
+
+    .footer__section-2 {
+        height: 690px;
+    }
+
+    .footer-text {
+        margin-top: 20px;
     }
 
     .last-line {
